--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@
     --ring: 0 0% 89.8%;
 
     --radius: 0.5rem;
+
+    --white: 0 0% 100%;
+    --black: 0 0% 3.9%;
+
   }
 
   .dark {
@@ -63,6 +67,9 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 14.9%;
+
+    --white: 0 0% 100%;
+    --black: 0 0% 3.9%;
   }
 }
 
