--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,8 @@
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
 
-    --card: 0 0% 96.1%;
-    --card-foreground: 0 0% 45.1%;
+    --card: 0, 0%, 97%; 
+    --card-foreground: 0 0% 50.1%;
 
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
@@ -19,7 +19,7 @@
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
 
-    --muted: 0 0% 96.1%;
+    --muted: 0 0% 97%;
     --muted-foreground: 0 0% 45.1%;
 
     --accent: 0 0% 96.1%;
